[B][COLOR=FF56ADDA]v4.4.6[/COLOR][/B]
• Added: Grunge/Alternative music genre icon
• Added: Support to set an own genre icon folder (has to look the same as the Extrapack source)
• Added: Scrollbar to Wall and 3D Wall view
• Added: Option to switch between Poster/Landscape in NetFilx view
• Added: Info dialog to show all used Video/Audio viewtype IDs

[B][COLOR=FF56ADDA]v4.4.5[/COLOR][/B]
• Fixed: NextUp still there dialog swapped episode/season labels
• Added: Video/music genre icons (more icons/options will come). Requires Extrapack refresh

[B][COLOR=FF56ADDA]v4.4.4a[/COLOR][/B]
• Fixed: Broken NetFilx landscape thumbs

[B][COLOR=FF56ADDA]v4.4.4[/COLOR][/B]
• Fixed: Ugly startup animation behaviour in combination with intro/playlist
• Fixed: Background duplicate
• Replaced: Intro with the original one (by samfisher)

[B][COLOR=FF56ADDA]v4.4.3[/COLOR][/B]
• Fixed: Broken Shelf view in Advance Launcher
• Changed: Some minor Extended Info dialog adjustments
• Changed: New startup loading animation
• Fixed: Overlapping video resolution icon in List view (for Music Videos)

[B][COLOR=FF56ADDA]v4.4.2[/COLOR][/B]
• Fixed: Swapped Lithuanian and French language files
• Improved: Startup loading behaviour
• Changed: Some default wallpaper

[B][COLOR=FF56ADDA]v4.4.1[/COLOR][/B]
• Fixed: Watched state indicator bug
• Fixed: Background diffuse won't change while changing some views to another

[B][COLOR=FF56ADDA]v4.4.0[/COLOR][/B]
• Fixed: Auto complete suggestions width in T9Search of ExtendedInfo script
• Added: Option to move the NextUp notification overlay to the top
• Reworked: Add-on skin setting category
• Removed: Experimental YouTube channel overlay 
• Fixed: PinSentry add-on compatiblity

[B][COLOR=FF56ADDA]v4.3.9[/COLOR][/B]
• Added: Skinned T9Search dialog of ExtendedInfo script
• Added: Global support of auto completion for the virtual keyboard (latest ExtendedInfo script required)
• Replaced: Purple virtual keyboard buttons with blue ones 