@@ -99,6 +99,16 @@
 					<shadowcolor>FF000000</shadowcolor>
 					<font>font13</font>
 					<align>left</align>
+					<label>List Container:sets</label>
+					<visible>Container.Content(sets)</visible>
+				</control>
+				<control type="label">
+					<width>780</width>
+					<height>21</height>
+					<textcolor>FFFF0000</textcolor>
+					<shadowcolor>FF000000</shadowcolor>
+					<font>font13</font>
+					<align>left</align>
 					<label>List Container:episodes</label>
 					<visible>Container.Content(episodes)</visible>
 				</control>
